--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "10.15.0"
+    "node": "10.15.0",
+    "npm":"6.4.1"
   },
   "author": "",
   "license": "ISC",
